fix: replace deprecated golint linter by revive

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,7 +19,7 @@ linters:
     - godot
     - gofumpt
     - goimports
-    - golint
+    - revive
     - goprintffuncname
     - gosec
     - gosimple
