--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Output of the go coverage tool
+*.cov
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Binaries of any kind
+bin/
